- Added a few more fixes to the tools menu.
- New untitled files now get saved properly.
- The { autocompletion now only inserts an extra newline when building function parameters and can also detect structs, and will append }; for them.
- The code hint will now auto-hide after 10 seconds instead of 2,5.
- Added a new autosave function.
- Added some preparation code for TDM MinGW64.
- And some more stuff I forgot about.

Version 5.0.0.6 - 3 November 2011

- Fixed an nil pointer read crash in the append closing brace code.
- Updated the comment/uncomment functions.
- The variable scanner now also supports local variables in non-class functions.
- The scanner now does not scan the same word twice (making it 2x faster).
- The Environment Options window now does not crash when its not allowed to edit file associations.
- One can now use Ctrl+Scroll to edit text size, just like in browsers. Also added information about it in the Options menu.
- Files now open up much faster thanks to avoiding repaints.
- Fixed a buffer overflow in the tooltip generator and rewritten the locals scanner, which is now 50% faster.
- The append closing braces function now works on every keyboard Win32 supports.
- Removed any reference to DevTabs, which were too flaky edits (for example, the ComCtrl Manifest caused it to not paint child windows) of TPageControl and TTabControl.
- Fixed a bug in the code that checks for the existence of tools.
- Added new Chinese_TC translations created by cin.getline.
- The uninstaller now does not forget to delete Dev's help file and folder if it's empty.

Version 5.0.0.5 - 24 Oktober 2011

- Rewritten the tooltip generator. It now uses better code scanning techniques and does not show up above what you were typing anymore.
- Brace completion is now disabled inside strings and comments. It now also supports closing the < character.
- The tooltip now also works when typing foo[bar].member and hovering above member.