@@ -8,85 +8,86 @@
   resources were bound to the produced executable.
 */
 
-#define main_cCurSrc 65088
-#define main_cSrcPath 65089
-#define main_cDevVer 65090
-#define main_cDefault 65091
-#define main_cExecDir 65092
-#define main_cSrcList 65093
-#define main_cWordxy 65094
-#define compiler_cAppendStr 65095
-#define compiler_cCmdLine 65096
-#define compiler_cMakeLine 65097
-#define compiler_cSingleFileMakeLine 65098
-#define compiler_cMake 65099
-#define compiler_cDots 65100
-#define compiler_cAppendStr 65101
+#define main_cPrjPath 65088
+#define main_cCurSrc 65089
+#define main_cSrcPath 65090
+#define main_cDevVer 65091
+#define main_cDefault 65092
+#define main_cExecDir 65093
+#define main_cSrcList 65094
+#define main_cWordxy 65095
+#define compiler_cAppendStr 65096
+#define compiler_cCmdLine 65097
+#define compiler_cMakeLine 65098
+#define compiler_cSingleFileMakeLine 65099
+#define compiler_cMake 65100
+#define compiler_cDots 65101
 #define compiler_cAppendStr 65102
-#define version_FLT_RES 65104
-#define version_FLT_HELPS 65105
-#define version_FLT_MSVCPROJECTS 65106
-#define version_cBP 65107
-#define version_cErr 65108
-#define version_cABP 65109
-#define version_cGut 65110
-#define version_cSel 65111
-#define CodeToolTip_SCodeToolTipIndexXOfX 65112
-#define Templates_cTemplate 65113
-#define Templates_cEditor 65114
-#define Templates_cProject 65115
-#define main_cEXEName 65116
-#define main_cPrjName 65117
-#define main_cPrjFile 65118
-#define main_cPrjPath 65119
-#define version_WINDRES_PROGRAM 65120
-#define version_DLLWRAP_PROGRAM 65121
-#define version_GPROF_PROGRAM 65122
-#define version_PACKMAN_PROGRAM 65123
-#define version_OPT_DIRS 65124
-#define version_OPT_EDITOR 65125
-#define version_OPT_OPTIONS 65126
-#define version_OPT_COMPILERSETS 65127
-#define version_WEBUPDATE_SECTION 65128
-#define version_DEFCOMPILERSET 65129
-#define version_FLT_BASE 65130
-#define version_FLT_ALLFILES 65131
-#define version_FLT_PROJECTS 65132
-#define version_FLT_HEADS 65133
-#define version_FLT_CS 65134
-#define version_FLT_CPPS 65135
-#define version_THEME_DIR 65136
-#define version_PACKAGES_DIR 65137
-#define version_LIB_EXT 65138
-#define version_OBJ_EXT 65139
-#define version_DLL_EXT 65140
-#define version_EXE_EXT 65141
-#define version_DEV_EXT 65142
-#define version_HTML_EXT 65143
-#define version_RTF_EXT 65144
-#define version_INI_EXT 65145
-#define version_TEMPLATE_EXT 65146
-#define version_SYNTAX_EXT 65147
-#define version_MAKE_PROGRAM 65148
-#define version_GCC_PROGRAM 65149
-#define version_GPP_PROGRAM 65150
-#define version_GDB_PROGRAM 65151
-#define version_DEV_CLASSFOLDERS_FILE 65152
-#define version_DEV_WEBMIRRORS_FILE 65153
-#define version_DEV_MAKE_FILE 65154
-#define version_DEV_CODEINS_FILE 65155
-#define version_DEV_MAINHELP_FILE 65156
-#define version_DEV_GNOME_THEME 65157
-#define version_DEV_NEWLOOK_THEME 65158
-#define version_DEV_BLUE_THEME 65159
-#define version_BIN_DIR 65160
-#define version_LIB_DIR 65161
-#define version_C_INCLUDE_DIR 65162
-#define version_CPP_INCLUDE_DIR 65163
-#define version_LANGUAGE_DIR 65164
-#define version_ICON_DIR 65165
-#define version_HELP_DIR 65166
-#define version_TEMPLATE_DIR 65167
+#define compiler_cAppendStr 65103
+#define version_FLT_CPPS 65104
+#define version_FLT_RES 65105
+#define version_FLT_HELPS 65106
+#define version_FLT_MSVCPROJECTS 65107
+#define version_cBP 65108
+#define version_cErr 65109
+#define version_cABP 65110
+#define version_cGut 65111
+#define version_cSel 65112
+#define CodeToolTip_SCodeToolTipIndexXOfX 65113
+#define Templates_cTemplate 65114
+#define Templates_cEditor 65115
+#define Templates_cProject 65116
+#define main_cEXEName 65117
+#define main_cPrjName 65118
+#define main_cPrjFile 65119
+#define version_GDB_PROGRAM 65120
+#define version_WINDRES_PROGRAM 65121
+#define version_DLLWRAP_PROGRAM 65122
+#define version_GPROF_PROGRAM 65123
+#define version_PACKMAN_PROGRAM 65124
+#define version_OPT_DIRS 65125
+#define version_OPT_EDITOR 65126
+#define version_OPT_OPTIONS 65127
+#define version_OPT_COMPILERSETS 65128
+#define version_WEBUPDATE_SECTION 65129
+#define version_DEFCOMPILERSET 65130
+#define version_FLT_BASE 65131
+#define version_FLT_ALLFILES 65132
+#define version_FLT_PROJECTS 65133
+#define version_FLT_HEADS 65134
+#define version_FLT_CS 65135
+#define version_TEMPLATE_DIR 65136
+#define version_THEME_DIR 65137
+#define version_PACKAGES_DIR 65138
+#define version_LIB_EXT 65139
+#define version_OBJ_EXT 65140
+#define version_DLL_EXT 65141
+#define version_EXE_EXT 65142
+#define version_DEV_EXT 65143
+#define version_HTML_EXT 65144
+#define version_RTF_EXT 65145
+#define version_INI_EXT 65146
+#define version_TEMPLATE_EXT 65147
+#define version_SYNTAX_EXT 65148
+#define version_MAKE_PROGRAM 65149
+#define version_GCC_PROGRAM 65150
+#define version_GPP_PROGRAM 65151
+#define version_DEV_SHORTCUTS_FILE 65152
+#define version_DEV_CLASSFOLDERS_FILE 65153
+#define version_DEV_WEBMIRRORS_FILE 65154
+#define version_DEV_MAKE_FILE 65155
+#define version_DEV_CODEINS_FILE 65156
+#define version_DEV_MAINHELP_FILE 65157
+#define version_DEV_GNOME_THEME 65158
+#define version_DEV_NEWLOOK_THEME 65159
+#define version_DEV_BLUE_THEME 65160
+#define version_BIN_DIR 65161
+#define version_LIB_DIR 65162
+#define version_C_INCLUDE_DIR 65163
+#define version_CPP_INCLUDE_DIR 65164
+#define version_LANGUAGE_DIR 65165
+#define version_ICON_DIR 65166
+#define version_HELP_DIR 65167
 #define SynEditStrConst_SYNS_FilterCPP 65168
 #define SynEditStrConst_SYNS_FilterHTML 65169
 #define SynEditStrConst_SYNS_FilterRTF 65170
@@ -97,12 +98,12 @@
 #define SynEditTextBuffer_SInvalidCapacity 65175
 #define version_DEVCPP 65176
 #define version_DEVCPP_VERSION 65177
-#define version_DEFAULT_LANG_FILE 65178
-#define version_DEV_INTERNAL_OPEN 65179
-#define version_DEV_SEARCHLOOP 65180
-#define version_DEV_COMPLETION_CACHE 65181
-#define version_DEV_DEFAULTCODE_FILE 65182
-#define version_DEV_SHORTCUTS_FILE 65183
+#define version_DEVCPP_BUILDTIME 65178
+#define version_DEFAULT_LANG_FILE 65179
+#define version_DEV_INTERNAL_OPEN 65180
+#define version_DEV_SEARCHLOOP 65181
+#define version_DEV_COMPLETION_CACHE 65182
+#define version_DEV_DEFAULTCODE_FILE 65183
 #define SynEditStrConst_SYNS_AttrHexadecimal 65184
 #define SynEditStrConst_SYNS_AttrIdentifier 65185
 #define SynEditStrConst_SYNS_AttrIllegalChar 65186
@@ -457,6 +458,7 @@
 #define SysConst_SDiskFull 65535
 STRINGTABLE
 BEGIN
+	main_cPrjPath,	"<PROJECTPATH>"
 	main_cCurSrc,	"<SOURCENAME>"
 	main_cSrcPath,	"<SOURCEPATH>"
 	main_cDevVer,	"<DEVCPPVERSION>"
@@ -472,6 +474,7 @@ BEGIN
 	compiler_cDots,	"..."
 	compiler_cAppendStr,	"%s -L\"%s\""
 	compiler_cAppendStr,	"%s -I\"%s\" "
+	version_FLT_CPPS,	"C++ source files (*.cpp;*.cc;*.cxx;*.c++;*.cp)|*.cpp;*.cc;*.cxx;*.c++;*.cp"
 	version_FLT_RES,	"Resource scripts (*.rc)|*.rc"
 	version_FLT_HELPS,	"Help files (*.hlp;*.chm;*.col)|*.hlp;*.chm;*.col|HTML files (*.htm;*.html)|*.htm;*.html|Text files (*.doc;*.rtf;*.txt)|*.doc;*.rtf;*.txt|All files (*.*)|*.*"
 	version_FLT_MSVCPROJECTS,	"MS Visual C++ projects (*.dsp)|*.dsp"
@@ -487,7 +490,7 @@ BEGIN
 	main_cEXEName,	"<EXENAME>"
 	main_cPrjName,	"<PROJECTNAME>"
 	main_cPrjFile,	"<PROJECTFILE>"
-	main_cPrjPath,	"<PROJECTPATH>"
+	version_GDB_PROGRAM,	"gdb.exe"
 	version_WINDRES_PROGRAM,	"windres.exe"
 	version_DLLWRAP_PROGRAM,	"dllwrap.exe"
 	version_GPROF_PROGRAM,	"gprof.exe"
@@ -503,7 +506,7 @@ BEGIN
 	version_FLT_PROJECTS,	"Dev-C++ project (*.dev)|*.dev"
 	version_FLT_HEADS,	"Header files (*.h;*.hpp;*.rh;*.hh)|*.h;*.hpp;*.rh;*.hh"
 	version_FLT_CS,	"C source files (*.c)|*.c"
-	version_FLT_CPPS,	"C++ source files (*.cpp;*.cc;*.cxx;*.c++;*.cp)|*.cpp;*.cc;*.cxx;*.c++;*.cp"
+	version_TEMPLATE_DIR,	"Templates\\"
 	version_THEME_DIR,	"Themes\\"
 	version_PACKAGES_DIR,	"Packages\\"
 	version_LIB_EXT,	".a"
@@ -519,7 +522,7 @@ BEGIN
 	version_MAKE_PROGRAM,	"mingw32-make.exe"
 	version_GCC_PROGRAM,	"gcc.exe"
 	version_GPP_PROGRAM,	"g++.exe"
-	version_GDB_PROGRAM,	"gdb.exe"
+	version_DEV_SHORTCUTS_FILE,	"devshortcuts.cfg"
 	version_DEV_CLASSFOLDERS_FILE,	"classfolders.dcf"
 	version_DEV_WEBMIRRORS_FILE,	"mirrors.cfg"
 	version_DEV_MAKE_FILE,	"Makefile.win"
@@ -535,7 +538,6 @@ BEGIN
 	version_LANGUAGE_DIR,	"Lang\\"
 	version_ICON_DIR,	"Icons\\"
 	version_HELP_DIR,	""
-	version_TEMPLATE_DIR,	"Templates\\"
 	SynEditStrConst_SYNS_FilterCPP,	"C/C++ Files (*.c;*.cpp;*.h;*.hpp)|*.c;*.cpp;*.h;*.hpp"
 	SynEditStrConst_SYNS_FilterHTML,	"HTML Documents (*.htm;*.html)|*.htm;*.html"
 	SynEditStrConst_SYNS_FilterRTF,	"Rich Text Format Documents (*.rtf)|*.rtf"
@@ -545,13 +547,13 @@ BEGIN
 	SynEditTextBuffer_SListIndexOutOfBounds,	"Invalid stringlist index %d"
 	SynEditTextBuffer_SInvalidCapacity,	"Stringlist capacity cannot be smaller than count"
 	version_DEVCPP,	"Dev-C++"
-	version_DEVCPP_VERSION,	"5.0.0.7 RC1"
+	version_DEVCPP_VERSION,	"5.0.0.7 RC2"
+	version_DEVCPP_BUILDTIME,	"Nov 8 2011 - 16:24:55"
 	version_DEFAULT_LANG_FILE,	"English.lng"
 	version_DEV_INTERNAL_OPEN,	"$__DEV_INTERNAL_OPEN"
 	version_DEV_SEARCHLOOP,	"$__DEV_SEARCH_LOOP"
 	version_DEV_COMPLETION_CACHE,	"cache.ccc"
 	version_DEV_DEFAULTCODE_FILE,	"defaultcode.cfg"
-	version_DEV_SHORTCUTS_FILE,	"devshortcuts.cfg"
 	SynEditStrConst_SYNS_AttrHexadecimal,	"Hexadecimal"
 	SynEditStrConst_SYNS_AttrIdentifier,	"Identifier"
 	SynEditStrConst_SYNS_AttrIllegalChar,	"Illegal Char"
